--- a/a-1.html
+++ b/a-1.html
@@ -114,16 +114,22 @@
               <a href="#">갤러리</a>
               <div class="gallery">
                 <ul>
-                <li>
-                  <a href="#"><img src="images/images.jpg" alt="gallery1" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/images.jpg" alt="gallery2" /></a>
-                </li>
-                <li>
-                  <a href="#"><img src="images/images.jpg" alt="gallery3" /></a>
-                </li>
-              </ul>
+                  <li>
+                    <a href="#"
+                      ><img src="images/images.jpg" alt="gallery1"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><img src="images/images.jpg" alt="gallery2"
+                    /></a>
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><img src="images/images.jpg" alt="gallery3"
+                    /></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
