--- a/a-2.html
+++ b/a-2.html
@@ -29,8 +29,10 @@
       <!-- header -->
       <header class="header">
         <div class="logo">
-          <h1>GREEN</h1>
-          <h3>복지재단</h3>
+          <a href="#">
+            <h1>GREEN</h1>
+            <h3>복지재단</h3>
+          </a>
         </div>
         <nav>
           <ul class="nav">
@@ -52,7 +54,9 @@
         <section class="notice">
           <ul>
             <a href="#">공지사항</a>
-            <li><a href="#" id="first">Green Notice 1</a><span>2025.01.30</span></li>
+            <li>
+              <a href="#" id="first">Green Notice 1</a><span>2025.01.30</span>
+            </li>
             <li><a href="#">Green Notice 2</a><span>2025.05.15</span></li>
             <li><a href="#">Green Notice 3</a><span>2025.07.13</span></li>
             <li><a href="#">Green Notice 4</a><span>2025.08.15</span></li>
@@ -89,8 +93,10 @@
       <!-- footer -->
       <footer class="footer">
         <div class="logo footer-logo">
-          <h1>GREEN</h1>
-          <h3>복지재단</h3>
+          <a href="#">
+            <h1>GREEN</h1>
+            <h3>복지재단</h3>
+          </a>
         </div>
         <div class="copy">COPYRIGHT © by WEBDESIGN ALL RIGHTS RESERVED.</div>
         <div class="family">
