--- a/green.html
+++ b/green.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Green 복지재단</title>
     <!-- css -->
-    <link rel="stylesheet" href="css/a-2.css" />
+    <link rel="stylesheet" href="css/green.css" />
     <!-- js -->
     <script src="js/jquery-1.12.3.js"></script>
-    <script src="js/a-2.js"></script>
+    <script src="js/green.js"></script>
   </head>
   <body>
     <div class="txt-modal modal">
