--- a/kangwon.html
+++ b/kangwon.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>강원천문대</title>
-    <link rel="stylesheet" href="css/a-3.css" />
+    <link rel="stylesheet" href="css/kangwon.css" />
     <!-- js -->
     <script src="js/jquery-1.12.3.js"></script>
-    <script src="js/a-3.js"></script>
+    <script src="js/kangwon.js"></script>
   </head>
   <body>
     <!-- modal -->
