--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <title>JUST 쇼핑몰</title>
     <link rel="stylesheet" href="css/a-1.css" />
     <script src="js/jquery-1.12.3.js"></script>
-    <script src="js/a-1.js"></script>
+    <script src="js/shop.js"></script>
   </head>
   <body>
     <!-- modal -->
