--- a/ujin.html
+++ b/ujin.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>유진건설</title>
     <!-- css -->
-    <link rel="stylesheet" href="css/a-4.css" />
+    <link rel="stylesheet" href="css/ujin.css" />
     <!-- js -->
     <script src="js/jquery-1.12.3.js"></script>
-    <script src="js/a-4.js"></script>
+    <script src="js/ujin.js"></script>
   </head>
   <body>
     <div class="modal">
