--- a/joy.html
+++ b/joy.html
@@ -120,15 +120,17 @@
           <!-- banner -->
           <section class="banner">
             <img src="images/joy/banner.jpg" alt="banner" />
-            <div class="banner-txt">
-              <h2>조이컨트리클럽에서의 완벽한 휴식</h2>
-              <p>
-                자연이 어우러진 조이컨트리클럽에서 잊지 못할 순간을 경험하세요.
-                프리미엄 골프 코스와 다양한 레저 시설, 그리고 가족과 함께 즐길
-                수 있는 이벤트가 준비되어 있습니다.
-              </p>
+            <div class="banner-dscr">
+              <div class="banner-txt">
+                <h2>조이컨트리클럽에서의 완벽한 휴식</h2>
+                <p>
+                  자연이 어우러진 조이컨트리클럽에서 잊지 못할 순간을
+                  경험하세요. 프리미엄 골프 코스와 다양한 레저 시설, 그리고
+                  가족과 함께 즐길 수 있는 이벤트가 준비되어 있습니다.
+                </p>
+              </div>
+              <button id="banner">CLICK ></button>
             </div>
-            <div class="bannerBtn"><button id="banner">CLICK!</button></div>
           </section>
           <!-- notice/gallery -->
           <div class="no-ga">
