--- a/pureun.html
+++ b/pureun.html
@@ -155,7 +155,7 @@
                 </li>
                 <li>
                   <a href="#"
-                    >푸른마을 신제품 sns 홍보이벤트 <span>2025.06/06</span></a
+                    >푸른마을 신제품 sns 홍보이벤트 <span>2025.06.06</span></a
                   >
                 </li>
                 <li>
