--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JUST 쇼핑몰</title>
-    <link rel="stylesheet" href="css/a-1.css" />
+    <link rel="stylesheet" href="css/shop.css" />
     <script src="js/jquery-1.12.3.js"></script>
     <script src="js/shop.js"></script>
   </head>
