--- a/global.html
+++ b/global.html
@@ -149,7 +149,7 @@
           <div class="notice">
             <a href="#">공지사항</a>
             <ul class="notice-list">
-              <li>
+              <li id="first">
                 <a href="#">하이글로벌컴퍼니 인재채용<span>2025.06.13</span></a>
               </li>
               <li>
