--- a/kimchi.html
+++ b/kimchi.html
@@ -131,7 +131,7 @@
               </li>
             </ul>
           </section>
-          <!-- link -->
+          <!-- link *** 바로가기에 a태그 빠트림 -->
           <section class="link">
             <ul class="link-list">
               <li>
