--- a/museum.html
+++ b/museum.html
@@ -111,6 +111,7 @@
               </li>
             </ul>
           </section>
+          <!-- link *** 바로가기에 a태그 빼먹음 -->
           <section class="link">
             <ul class="link-list">
               <li>
