--- a/train.html
+++ b/train.html
@@ -122,6 +122,7 @@
               </li>
             </ul>
           </section>
+          <!-- link *** 바로가기 a태그 빠짐 -->
           <section class="link">
             <ul class="link-list">
               <li><a href="#"><img src="images/train/link1.jpeg" alt="link1"><div class="link-txt">바로가기</div></a></li>
