--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <h1>✶ 웹디자인개발기능사 실기예제모음 ✶</h1>
+    <div class="code">💻 코드 보기 <a href="https://github.com/miyaajd/Craftsman-Web-Development"> CLICK</a></div>
     <ul class="list">
       <li>
         A
